--- a/src/components/styles/componentsStyles.css
+++ b/src/components/styles/componentsStyles.css
@@ -47,7 +47,7 @@
 .container-weatherData {
   width: 35vw;
   overflow-y: scroll;
-  max-height:40vh;
+  max-height:65vh;
   background-color: rgba(0, 0, 0, 0.664);
   border-radius: 15px;
   padding: 15px;
@@ -60,10 +60,12 @@
   justify-content: space-between;
   font-size: 30px;
   padding-bottom: 8px;
+  margin: 30px 0px;
 }
 
 .caracteristics-container-title > span {
   margin: 2% 5%;
+  font-weight: bold;
 }
 
 .caracteristics-container {
